--- a/src/renderer/src/styles/global.scss
+++ b/src/renderer/src/styles/global.scss
@@ -6,6 +6,7 @@
 }
 
 body {
+  font-family: 'Roboto', sans-serif;
   width: 100%;
   height: 100%;
   button {
@@ -13,5 +14,23 @@ body {
   }
   input, button {
     border: none;
+  }
+
+
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #888; 
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
   }
 }
